[gd_scene load_steps=8 format=2]

[ext_resource path="res://PolyPlat/scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://PolyPlat/scenes/Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Screens.tscn" type="PackedScene" id=3]
[ext_resource path="res://PolyPlat/scenes/Goal.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Level1.gd" type="Script" id=5]
[ext_resource path="res://PolyPlat/scenes/Enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/Lava.gd" type="Script" id=7]

[node name="Level1" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )
victory = "Level2"

[node name="Player" parent="." instance=ExtResource( 1 )]
pause_mode = 1
position = Vector2( 112, 56 )
speed = 200

[node name="Floor Nodes" type="Node" parent="."]
pause_mode = 1

[node name="Floor" parent="Floor Nodes" instance=ExtResource( 2 )]
position = Vector2( 64, 128 )
scale = Vector2( 8, 1 )

[node name="Floor2" parent="Floor Nodes" instance=ExtResource( 2 )]
position = Vector2( 216, 128 )
scale = Vector2( 8, 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screens" parent="UI" instance=ExtResource( 3 )]

[node name="Enemy" parent="." instance=ExtResource( 6 )]
pause_mode = 1
position = Vector2( 0, 192 )
scale = Vector2( 24.5, 1 )
script = ExtResource( 7 )

[node name="Goal" parent="." instance=ExtResource( 4 )]
position = Vector2( 328, 112 )
[connection signal="quit" from="UI/Screens" to="." method="_on_Screens_quit"]
[connection signal="try_again" from="UI/Screens" to="." method="_on_Screens_try_again"]
[connection signal="unpause" from="UI/Screens" to="." method="_on_Screens_unpause"]
[connection signal="body_entered" from="Enemy" to="." method="_on_Enemy_body_entered"]
[connection signal="body_entered" from="Goal" to="." method="_on_Goal_body_entered"]
